--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "ionic-modular-seed",
   "version": "1.0.0",
   "description": "Ionic modular seed",
+  "authors": [
+    "Manu de Frutos Vila <manuel.defrutosvila@sopra.com>",
+    "Sergi Collado <sergio.collado@sopra.com>"
+  ],
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^1.3.3",
@@ -22,6 +26,10 @@
     "com.ionic.keyboard"
   ],
   "cordovaPlatforms": [
-    "ios"
-  ]
+    "ios",
+    "android"
+  ],
+  "scripts": {
+    "postinstall": "bower install"
+  }
 }
