--- a/ionic.project
+++ b/ionic.project
@@ -7,6 +7,13 @@
   ],
   "watchPatterns": [
     "www/**/*",
-    "!www/lib/**/*"
+    "!www/vendor/**/*"
+  ],
+  "browsers": [
+    {
+      "platform": "android",
+      "browser": "crosswalk",
+      "version": "13.42.319.6"
+    }
   ]
 }
