--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "gulp": "^3.9.0",
     "gulp-sass": "^2.1.0",
     "gulp-concat": "^2.6.0",
-    "gulp-minify-css": "^1.2.1",
+    "gulp-clean-css": "^3.3.1",
     "gulp-rename": "^1.2.2"
   },
   "devDependencies": {
@@ -23,7 +23,7 @@
     "cordova-plugin-console",
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
-    "com.ionic.keyboard"
+    "ionic-plugin-keyboard"
   ],
   "cordovaPlatforms": [
     "ios",
